solved day 5 y19